// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className="root"
>
  <div
    className="box"
  >
    <form
      onSubmit={null}
    >
      <TextField
        changeHandler={[Function]}
        description={null}
        disabled={false}
        error={null}
        fieldId="newPassword"
        isLabelVisible={true}
        label="New password"
        placeholder={null}
        required={true}
        type="password"
      />
      <TextField
        changeHandler={[Function]}
        description={null}
        disabled={false}
        error={null}
        fieldId="newPasswordRepeat"
        isLabelVisible={true}
        label="Repeat new password"
        placeholder={null}
        required={true}
        type="password"
      />
      <Button
        block={true}
        clickHandler={null}
        disabled={false}
        icon={null}
        iconPosition="before"
        isLabelVisible={true}
        label="Change password"
        loading={false}
        priority="primary"
        size="medium"
        type="submit"
        variant="default"
      />
    </form>
  </div>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root"
>
  <div
    className="title"
  >
    Company
  </div>
  <div
    className="box"
  >
    <form
      onSubmit={null}
    >
      <div
        className="error"
      >
        Error message
      </div>
      <TextField
        changeHandler={[Function]}
        description={null}
        disabled={false}
        error={null}
        fieldId="newPassword"
        isLabelVisible={true}
        label="New password"
        placeholder={null}
        required={true}
        type="password"
      />
      <TextField
        changeHandler={[Function]}
        description={null}
        disabled={false}
        error={null}
        fieldId="newPasswordRepeat"
        isLabelVisible={true}
        label="Repeat new password"
        placeholder={null}
        required={true}
        type="password"
      />
      <Button
        block={true}
        clickHandler={null}
        disabled={false}
        icon={null}
        iconPosition="before"
        isLabelVisible={true}
        label="Change password"
        loading={false}
        priority="primary"
        size="medium"
        type="submit"
        variant="default"
      />
    </form>
    <div
      className="footer"
    >
      <a
        href="http://example.com"
      >
        link
      </a>
    </div>
  </div>
</div>
`;
